<resources>
    <string name="app_name">PiBuddy</string>
    <string name="navigation_drawer_open">Open Nav Draw</string>
    <string name="navigation_drawer_close">Close Nav Draw</string>
    <string name="command">Command......</string>
    <string name="save">Save</string>
    <string name="ip_address">IP Address....</string>
    <string name="username">Username....</string>
    <string name="password">Password....</string>
    <string name="connect">Connect</string>
    <string name="scan_for_available_devices">Scan For Available Devices....</string>
    <string name="pibuddy">PiBuddy</string>
    <string name="defaultPortNumber">Default Port Number</string>
    <string name="settings">Settings</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="textview">TextView</string>
    <string name="press_to_connect">Press to Connect</string>
    <string name="previous_connections">Previous Connections</string>
    <string name="clear_connections">Clear Connections</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="mem_usage">Memory Usage</string>
    <string name="disk_space">Disk Space</string>
    <string name="logged_in_users">Logged In Users</string>
    <string name="back">Back</string>
    <string name="custom_command">Custom Command</string>
    <string name="RestartScan">Restart Scan</string>
    <string name="available_device">Available Device</string>
    <string name="todo">TODO</string>
    <string name="result">Results</string>
    <string name="shell">Shell</string>
    <string name="running_custom_command">Running Custom Command.....15 Second Timeout</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="helptext">""</string>
    <string name="returnWifi">Return</string>
    <string name="returnwifiText">Wifi Connection Not Found Please Check Wifi</string>
    <string name="restart">Restart</string>
    <string name="power_off">Power Off</string>
    <string name="waiting_deployment">Waiting Deployment...</string>
    <string name="change_default_ssh_port">Change Default SSH Port</string>
    <string name="add_custom_button">Add Custom Button</string>
    <string name="add_custom_command_result">Add Custom Command Output</string>
    <string name="button_command">Button Command</string>
    <string name="suggestions">Suggestions</string>
    <string name="button_name">Button Name</string>
    <string name="widget_des">Display CPU, MEMORY and DISK usage for your chosen device.</string>
    <string name="custom_button_description">Add a custom button to the result view, the results of these commands will not be visible and should only be used for actions such as Power Off...</string>
    <string name="widget_device">Widget Device</string>
</resources>