<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_computer"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/Available_Device_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="78dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="16dp"
        android:text="@string/press_to_connect"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Available_Device_Text_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toEndOf="@+id/Available_Device_Text_View"
        app:layout_constraintTop_toTopOf="@+id/Available_Device_Text_View" />
</androidx.constraintlayout.widget.ConstraintLayout>