<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/dialog_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mitr_extralight"
        android:text="@string/add_custom_button"
        android:textAlignment="center"
        android:textColor="@color/PiPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_button_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/mitr_extralight"
        android:padding="6dp"
        android:text="@string/custom_button_description"
        android:textAlignment="center"
        android:textColor="#66666C"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_button_title" />

    <TextView
        android:id="@+id/dialog_button_suggesstions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/mitr_extralight"
        android:text="@string/suggestions"
        android:textAlignment="center"
        android:textColor="@color/PiPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_button_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spanCount="3"
        tools:itemCount="3"
        tools:listitem="@layout/item_custom_button"
        android:layout_margin="24dp"
        android:id="@+id/dialog_custom_btn_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_suggesstions"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    <EditText
        android:id="@+id/dialog_button_customCommandName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textColor="@color/black"
        android:background="@color/GreyLight"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/button_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_custom_btn_rv"/>

    <EditText
        android:id="@+id/dialog_button_customCommand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textColor="@color/black"
        android:background="@color/GreyLight"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/custom_command"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_customCommandName"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_btn_editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/PiPrimary"
        android:text="Confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_customCommand" />

</androidx.constraintlayout.widget.ConstraintLayout>