<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GreySecondary">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_computer" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/mitr_extralight"
            android:paddingTop="8dp"
            android:text="@string/previous_connections"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Nav_Header_Clear_Connection_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/PiPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/clear_connections"
            app:backgroundTint="@color/PiPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>



