<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PiAlternate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:padding="20dp"
            android:text="@string/cpu_usage"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CPUusageTextView"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tile"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/ResultsTitle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:padding="20dp"
            android:text="@string/mem_usage"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/MemUsageTextView"
            android:layout_width="fill_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tile"
            android:paddingBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:text="@string/disk_space"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <com.eyalbira.loadingdots.LoadingDots
            android:id="@+id/Scan_View_text_dot_loader"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="165dp"
            android:layout_marginTop="4dp"
            android:accessibilityLiveRegion="assertive"
            android:duplicateParentState="true"
            app:LoadingDots_dots_color="@android:color/holo_green_light"
            app:LoadingDots_dots_count="4"
            app:LoadingDots_dots_size="9dp"
            app:LoadingDots_dots_space="5dp"
            app:LoadingDots_jump_duration="900"
            app:LoadingDots_loop_duration="1200"
            app:LoadingDots_loop_start_delay="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MemUsageTextView" />

        <TextView
            android:id="@+id/DiskSpaceTextView"
            android:layout_width="fill_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tile"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:text="@string/logged_in_users"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LoggedInUsersTextView"
            android:layout_width="fill_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tile"
            android:paddingBottom="8dp"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/Result_View_Add_Command"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="44dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/CustomCommandTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_command"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/CustomCommandTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1000"
            android:textAlignment="center"
            tools:visibility="invisible" />


    </LinearLayout>


</ScrollView>