<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activites.Result_Activity"
        >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/GreySecondary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:targetApi="lollipop" />


        <TextView
            android:id="@+id/DiskSpace_Result_View"
            android:layout_width="0dp"
            android:layout_height="146dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/tile"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Mem_Result_View" />

        <TextView
            android:id="@+id/LoggedIn_Result_View"
            android:layout_width="0dp"
            android:layout_height="146dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/tile"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DiskSpace_Result_View" />

        <TextView
            android:id="@+id/CustomCommand_Result_View"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/tile"
            android:gravity="center"
            android:maxLength="1000"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddCustomCommandButton"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/CustomCommandTextTitle"
            android:layout_width="192dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/custom_command"
            android:textAlignment="center"
            android:textColor="@color/PiPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddCustomCommandButton"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="114dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:text="@string/logged_in_users"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/LoggedIn_Result_View"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/LoggedIn_Result_View"
            app:layout_constraintTop_toTopOf="@+id/LoggedIn_Result_View" />

        <TextView
            android:id="@+id/Mem_Result_View"
            android:layout_width="0dp"
            android:layout_height="146dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/tile"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CPU_Result_View" />

        <TextView
            android:id="@+id/CPU_Result_View"
            android:layout_width="0dp"
            android:layout_height="146dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/tile"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_extralight"
            android:text="@string/result"
            android:textColor="@color/PiPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/cpu_usage"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/CPU_Result_View"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/CPU_Result_View"
            app:layout_constraintTop_toTopOf="@+id/CPU_Result_View" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/mem_usage"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Mem_Result_View"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/Mem_Result_View"
            app:layout_constraintTop_toTopOf="@+id/Mem_Result_View" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/disk_space"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/DiskSpace_Result_View"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/DiskSpace_Result_View"
            app:layout_constraintTop_toTopOf="@+id/DiskSpace_Result_View" />

        <com.eyalbira.loadingdots.LoadingDots
            android:id="@+id/Main_Activity_text_dot_loader"
            android:layout_width="137dp"
            android:layout_height="37dp"
            android:layout_marginTop="12dp"
            android:accessibilityLiveRegion="assertive"
            android:duplicateParentState="true"
            app:LoadingDots_dots_color="@color/PiAlternate"
            app:LoadingDots_dots_count="4"
            app:LoadingDots_dots_size="9dp"
            app:LoadingDots_dots_space="5dp"
            app:LoadingDots_jump_duration="900"
            app:LoadingDots_loop_duration="1200"
            app:LoadingDots_loop_start_delay="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DiskSpace_Result_View" />


        <Button

            android:id="@+id/Result_View_PowerOffButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/roundedbuttonalternate"
            android:text="@string/power_off"
            app:layout_constraintEnd_toStartOf="@+id/Result_View_RestartButton"
            app:layout_constraintStart_toStartOf="@+id/LoggedIn_Result_View"
            app:layout_constraintTop_toBottomOf="@id/LoggedIn_Result_View"
            app:backgroundTint= "@color/GreySecondary"/>

        <Button
            android:id="@+id/Result_View_RestartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/roundedbuttonalternate"
            android:text="@string/restart"
            app:layout_constraintEnd_toEndOf="@+id/LoggedIn_Result_View"
            app:layout_constraintStart_toEndOf="@+id/Result_View_PowerOffButton"
            app:layout_constraintTop_toTopOf="@+id/Result_View_PowerOffButton"
            app:backgroundTint= "@color/buttonalternate"/>

        <ImageView
            android:id="@+id/AddCustomCommandButton"
            android:layout_width="70dp"
            android:layout_height="51dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Result_View_RestartButton"
            app:srcCompat="@drawable/ic_baseline_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>